--- a/ecommerce.html
+++ b/ecommerce.html
@@ -4773,8 +4773,9 @@ function showOrderDetailByData(order) {
     let shouldShowPaymentButton = true;
     
     // 已填末五碼/LINE名稱 或 已付款待出貨 = 已付款
-    // 優先用 GAS 回傳的 order.付款方式 判斷，fallback 用 匯款末五碼 猜
-    const isLinePayOrder = order.付款方式 === 'LINE Pay';
+    // 優先用 GAS 回傳的 order.付款方式，若為空（舊訂單）則用 匯款末五碼 開頭 LINE: 來判斷
+    const isLinePayOrder = order.付款方式 === 'LINE Pay' || 
+                           (!order.付款方式 && order.匯款末五碼 && order.匯款末五碼.startsWith('LINE:'));
     const linePayFilled = isLinePayOrder && order.匯款末五碼 && order.匯款末五碼.startsWith('LINE:') && order.匯款末五碼.replace('LINE:','').trim() !== '';
     const transferFilled = !isLinePayOrder && order.匯款末五碼 && order.匯款末五碼 !== '-' && order.匯款末五碼 !== '' && !order.匯款末五碼.startsWith('LINE:');
     const hasPaid = linePayFilled || transferFilled || order.訂單狀態 === '已付款待出貨';
