--- a/ecommerce.html
+++ b/ecommerce.html
@@ -680,7 +680,7 @@
             max-width: 500px;
             width: 90%;
             max-height: 90vh;
-            overflow-y: auto;
+            overflow-y: hidden;
             display: flex;
             flex-direction: column;
         }
@@ -935,6 +935,7 @@
             font-size: 18px;
             font-weight: 700;
             cursor: pointer;
+            flex-shrink: 0;
         }
 
         .add-to-cart-modal-btn:disabled {
@@ -1046,22 +1047,26 @@
         /* Toast 提示 */
         .toast {
             position: fixed;
-            top: 100px;
-            right: 20px;
+            bottom: 30px;
+            left: 50%;
+            transform: translateX(-50%) translateY(100px);
             background: var(--accent-green);
             color: var(--secondary);
-            padding: 15px 25px;
-            border-radius: 10px;
+            padding: 12px 20px;
+            border-radius: 25px;
             font-weight: 700;
-            z-index: 3000;
+            z-index: 99999;
             opacity: 0;
-            transform: translateX(400px);
             transition: all 0.3s ease;
+            white-space: nowrap;
+            max-width: 90vw;
+            text-align: center;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.4);
         }
 
         .toast.show {
             opacity: 1;
-            transform: translateX(0);
+            transform: translateX(-50%) translateY(0);
         }
 
         .toast.error {
@@ -4238,10 +4243,11 @@ function toggleCart() {
     
     cartSidebar.classList.toggle('active');
     
-    // 🔥 開啟購物車時添加歷史記錄
     if (isOpening) {
         history.pushState({ modal: 'cart' }, '');
         isModalOpen = true;
+    } else {
+        isModalOpen = false;
     }
 }
 
@@ -4360,6 +4366,7 @@ function updateCheckoutSummary() {
 
 function closeCheckout() {
     document.getElementById('checkoutModal').classList.remove('active');
+    isModalOpen = false;
 }
 
 // 🆕 切換取貨方式（7-11 / 自取）
@@ -4781,23 +4788,26 @@ function showOrderDetailByData(order) {
                 countdownHTML = `
                     <div style="
                         background: linear-gradient(135deg, rgba(255, 69, 0, 0.2), rgba(255, 140, 0, 0.2));
-                        border: 2px solid #ff4500;
-                        border-radius: 15px;
-                        padding: 20px;
-                        margin-bottom: 20px;
-                        text-align: center;
+                        border: 1.5px solid #ff4500;
+                        border-radius: 10px;
+                        padding: 8px 12px;
+                        margin-bottom: 8px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                        gap: 10px;
                     ">
-                        <h2 style="color: #ff4500; font-size: 20px; margin-bottom: 15px;">⏰ 付款倒數</h2>
+                        <span style="color:#ff4500;font-size:12px;font-weight:700;white-space:nowrap;">⏰ 付款倒數</span>
                         <div id="countdown-${orderIdHash}" style="
-                            font-size: 32px;
+                            font-size: 20px;
                             font-weight: 900;
                             color: #FFD700;
                             font-family: 'Orbitron', monospace;
                         ">
                             ${String(hours).padStart(2, '0')}:${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}
                         </div>
-                        <div style="color: #ff8c00; margin-top: 10px; font-size: 14px;">
-                            請於時間內完成付款
+                        <div style="color:#ff8c00;font-size:15px;font-weight:700;white-space:nowrap;">
+                            請盡快完成付款
                         </div>
                     </div>
                 `;
